--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "flipbook-vue",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "description": "3D page flip effect for Vue.js",
   "homepage": "https://ts1.github.io/flipbook-vue/",
   "author": "Takeshi Sone <takeshi.sone@gmail.com> (https://github.com/ts1)",
+  "keywords": [
+    "vue",
+    "flipbook",
+    "component",
+    "flip",
+    "turn",
+    "page",
+    "3d",
+    "coffeescript",
+    "coffeescript2"
+  ],
   "main": "dist/flipbook.cjs.js",
   "module": "dist/flipbook.es.js",
   "unpkg": "dist/flipbook.min.js",
@@ -55,8 +66,5 @@
     "src/Flipbook.vue",
     "src/matrix.coffee"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ts1/flipbook-vue.git"
-  }
+  "repository": "github:ts1/flipbook-vue.git"
 }
