--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "rematrix": "^0.4.1"
   },
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-url": "^5.0.1",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-service": "^4.3.0",
     "autoprefixer": "^9.5.1",
@@ -40,12 +44,10 @@
     "coffeescript": "^2.4.1",
     "core-js": "^2.6.5",
     "rollup": "^1.12.5",
-    "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-coffee-script": "^2.0.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-vue": "^5.0.0",
+    "svgo-loader": "^2.2.1",
     "vue": "^2.6.10",
     "vue-cli-plugin-coffeescript": "^0.0.3",
     "vue-material-design-icons": "^3.2.0",
