vue3 package build

--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "core-js": "^2.6.5",
     "rollup": "^1.12.5",
     "rollup-plugin-coffee-script": "^2.0.0",
+    "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^5.0.0",
-    "rollup-plugin-vue": "^5.0.0",
+    "rollup-plugin-vue": "^6.0.0",
     "svgo-loader": "^2.2.1",
     "url-loader": "^4.1.1",
     "vue": "^3.0.0",
