--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "flipbook-vue": "link:../..",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-material-design-icons": "^5.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
