--- a/package.json
+++ b/package.json
@@ -34,39 +34,23 @@
     }
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest demo",
     "dist": "rollup -c rollup.config.js"
-  },
-  "dependencies": {
-    "rematrix": "^0.4.1"
   },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-url": "^5.0.1",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-service": "^4.3.0",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-url": "^7.0.0",
     "@vue/compiler-sfc": "^3.2.37",
-    "autoprefixer": "^9.5.1",
-    "babel-loader": "^8.2.5",
-    "cache-loader": "^4.1.0",
-    "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.4.1",
-    "core-js": "^2.6.5",
+    "autoprefixer": "^10.4.8",
+    "coffeescript": "^2.7.0",
+    "postcss": "^8.4.16",
     "rollup": "^2.77.3",
     "rollup-plugin-coffee-script": "^2.0.0",
     "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-vue2": "npm:rollup-plugin-vue@^5.0.0",
-    "svgo-loader": "^2.2.1",
-    "thread-loader": "^3.0.4",
-    "url-loader": "^4.1.1",
-    "vue-cli-plugin-coffeescript": "^0.0.3",
-    "vue-cli-plugin-pug": "~2.0.0",
-    "vue-material-design-icons": "^3.2.0",
     "vue-template-compiler": "^2.7.8"
   },
   "peerDependencies": {
@@ -82,8 +66,9 @@
     "not dead"
   ],
   "files": [
-    "dist",
-    "src/Flipbook.vue",
-    "src/matrix.coffee"
-  ]
+    "dist"
+  ],
+  "dependencies": {
+    "rematrix": "^0.7.2"
+  }
 }
