--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,12 +29,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
-      - run: |
-        pnpm i
-        pnpm dist
-        cd examples/demo
-        pnpm i
-        pnpm build
+      - run: pnpm i && pnpm dist
+      - run: cd examples/demo && pnpm i && pnpm build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
