--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 16
 
       - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
 
       - name: Get pnpm store directory
         id: pnpm-cache
