--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
 
       - name: Get pnpm store directory
         id: pnpm-cache
